--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -9,28 +9,29 @@
   <!--result table div-->
   <div *ngIf="!error">
 
-    <table class="table table-dark">
+    <table class="table table-dark table-striped">
       <tr>
-        <th>#</th>
-        <th>Image</th>
-        <th>Title</th>
-        <th>Price</th>
-        <th>Shipping</th>
-        <th>Zip</th>
-        <th>Seller</th>
-        <th>Wishlist</th>
+        <th scope="col">#</th>
+        <th scope="col">Image</th>
+        <th scope="col">Title</th>
+        <th scope="col">Price</th>
+        <th scope="col">Shipping</th>
+        <th scope="col">Zip</th>
+        <th scope="col">Seller</th>
+        <th scope="col">Wishlist</th>
       </tr>
 
-      <tr *ngFor="let row of searchJson.findItemsAdvancedResponse[0].searchResult[0].item;index as i">
-        <td>{{i+1}}</td>
+      <tr *ngFor="let row of searchJson.findItemsAdvancedResponse[0].searchResult[0].item|
+      slice: (page-1) * pageSize : (page-1) * pageSize + pageSize;index as i">
+        <td>{{(page-1)*10+i+1}}</td>
         <td><img src="{{row.galleryURL[0]}}"></td>
-        <td>{{ row.title.toString().length>35 ? row.title.toString().substring(0,35):row.title.toString() }}</td>
-        <!--<td>{{ row.title.toString().length>35 ? row.title.toString().substring(0,35):row.title.toString() }}</td>-->
-        <!--<td>{{ row.title.length>35?row.title.splice(0,35):row.title }}</td>-->
-        <td>${{row.sellingStatus[0].currentPrice[0].__value__}}</td>
-        <td>{{row.shippingInfo[0].shippingServiceCost[0].__value__}}</td>
-        <td>{{row.postalCode}}</td>
-        <td>{{row.sellerInfo[0].sellerUserName[0]}}</td>
+
+        <td><a href="#" data-toggle="tooltip" placement="bottom" ngbTooltip="{{row.title}}">{{  row.title==null ? 'N/A':  (row.title.toString().length>50 ?(row.title.toString().substring(0,50).slice(-1)==' '?(row.title.toString().substring(0,50)+'...'):(row.title.toString().substring(0,(row.title.toString().substring(0,50).lastIndexOf(' ')))+'...')) : row.title.toString())
+          }}</a></td>
+        <td>${{row.sellingStatus[0].currentPrice[0].__value__ ==null ? 'N/A':row.sellingStatus[0].currentPrice[0].__value__}}</td>
+        <td>{{row.shippingInfo[0].shippingServiceCost[0].__value__==null ? 'N/A':row.shippingInfo[0].shippingServiceCost[0].__value__}}</td>
+        <td>{{row.postalCode==null ? 'N/A':row.postalCode}}</td>
+        <td>{{row.sellerInfo[0].sellerUserName[0]==null ? 'N/A': row.sellerInfo[0].sellerUserName[0]}}</td>
         <td><i class="material-icons">
           add_shopping_cart
         </i></td>
@@ -38,6 +39,15 @@
       </tr>
 
     </table>
+    <ngb-pagination
+      [(page)]="page"
+      [pageSize]="pageSize"
+      [collectionSize]="searchJson.findItemsAdvancedResponse[0].searchResult[0].item.length"
+    class="d-flex justify-content-center">
+      <ng-template ngbPaginationPrevious>&#8249;&#8249;Prev</ng-template>
+      <ng-template ngbPaginationNext>Next &#8250;&#8250;</ng-template>
+      <ng-template ngbPaginationNumber let-page>{{ page }}</ng-template>
+    </ngb-pagination>
   </div>
 
 
