--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -26,7 +26,8 @@
         <td>{{(page-1)*10+i+1}}</td>
         <td><img src="{{row.galleryURL[0]}}"></td>
 
-        <td><a href="#" data-toggle="tooltip" placement="bottom" ngbTooltip="{{row.title}}">{{  row.title==null ? 'N/A':  (row.title.toString().length>50 ?(row.title.toString().substring(0,50).slice(-1)==' '?(row.title.toString().substring(0,50)+'...'):(row.title.toString().substring(0,(row.title.toString().substring(0,50).lastIndexOf(' ')))+'...')) : row.title.toString())
+        <td><a data-toggle="tooltip" placement="bottom" ngbTooltip="{{row.title}}"
+               (click)="callChild(row['itemId']['0'],row.title,row)">{{  row.title==null ? 'N/A':  (row.title.toString().length>50 ?(row.title.toString().substring(0,50).slice(-1)==' '?(row.title.toString().substring(0,50)+'...'):(row.title.toString().substring(0,(row.title.toString().substring(0,50).lastIndexOf(' ')))+'...')) : row.title.toString())
           }}</a></td>
         <td>${{row.sellingStatus[0].currentPrice[0].__value__ ==null ? 'N/A':row.sellingStatus[0].currentPrice[0].__value__}}</td>
         <td>{{row.shippingInfo[0].shippingServiceCost[0].__value__==null ? 'N/A':row.shippingInfo[0].shippingServiceCost[0].__value__}}</td>
@@ -52,3 +53,4 @@
 
 
 </div>
+<app-prod-details></app-prod-details>
