Back button implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 
 <app-form-component>
 
-  <app-results></app-results>
+  <app-results>
+    <app-prod-details></app-prod-details>
+  </app-results>
   <app-wishlist></app-wishlist>
 </app-form-component>
 
