--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -53,4 +53,4 @@
 
 
 </div>
-<app-prod-details></app-prod-details>
+<app-prod-details (sendValueToResult)="setParentValue($event)" ></app-prod-details>
