--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -1,4 +1,10 @@
-<div *ngIf="itemDetailsJson&&photosJson&&similarItemsJson">
+
+
+
+<div *ngIf="itemDetailsJson&&similarItemsJson&&showResults">
+
+
+  <button (click)="emitToParent()">List</button>
 
   <div>
     <ul class="nav nav-pills mb-3 justify-content-center pull-right"  id="pills-tab" role="tablist" >
@@ -35,7 +41,7 @@
           Product Images
         </td>
         <td>
-          Click for product images
+          <a data-toggle="modal" href="#imageModal" data-target="#imageModal">Click for product images</a>
         </td>
       </tr>
 
@@ -244,7 +250,97 @@
   </div>
 
   <div *ngIf="simclicked" id="simTab" class="tab-pane fade show active" aria-labelledby="pills-similar-tab">
-    Inside similar
+    <select id="sortAttr" (change)="sort($event.target.value)">
+      <option value="default">Default</option>
+      <option value="ProductName" >Product Name</option>
+      <option value="DaysLeft">Days Left</option>
+      <option value="Price">Price</option>
+      <option value="ShippingCost">Shipping Cost</option>
+    </select>
+
+    <select id='sorder'(change)="setOrder($event.target.value)" disabled>
+      <option value="ascending">Ascending</option>
+      <option value="descending">Descending</option>
+    </select>
+    <div class="card flex-row flex-wrap bg-dark" style="margin-top: 10px;margin-bottom: 5px;" *ngFor="let row of itemArray| slice:0:5">
+      <div>
+        <img class="card-header border-0" [attr.src]="row.imageURL" style="padding-bottom: 10px;padding-top: 10px;height: 160px;width: 160px;" alt="Card image cap">
+      </div>
+
+      <div class="card-block px-2" style="color: white">
+        <p *ngIf="row.title!=undefined" style="margin-top: 10px;"><a [attr.href]="row.viewItemURL" target="_blank">{{row.title}}</a></p>
+        <p *ngIf="row.buyItNowPrice!=undefined">Price:{{row.buyItNowPrice.__value__}}</p>
+        <p *ngIf="row.shippingCost!=undefined">Shipping Cost:{{row.shippingCost.__value__}}</p>
+        <p *ngIf="row.timeLeft!=undefined">Days Left:{{row.timeLeft.substring(row.timeLeft.lastIndexOf('P')+1,row.timeLeft.lastIndexOf('D'))}}</p>
+      </div>
+    </div>
+    <div id="demo" class="collapse">
+      <div class="card flex-row flex-wrap bg-dark" style="margin-top: 10px;margin-bottom: 5px;" *ngFor="let row of itemArray| slice:5:
+  similarItemsJson.getSimilarItemsResponse.itemRecommendations.item.length">
+        <div>
+          <img class="card-header border-0" [attr.src]="row.imageURL" style="padding-bottom: 10px;padding-top: 10px;height: 160px;width: 160px;" alt="Card image cap">
+        </div>
+
+        <div class="card-block px-2" style="color: white">
+          <p *ngIf="row.title!=undefined" style="margin-top: 10px;"><a [attr.href]="row.viewItemURL" target="_blank">{{row.title}}</a></p>
+          <p *ngIf="row.buyItNowPrice!=undefined">Price:{{row.buyItNowPrice.__value__}}</p>
+          <p *ngIf="row.shippingCost!=undefined">Shipping Cost:{{row.shippingCost.__value__}}</p>
+          <p *ngIf="row.timeLeft!=undefined">Days Left:{{row.timeLeft.substring(row.timeLeft.lastIndexOf('P')+1,row.timeLeft.lastIndexOf('D'))}}</p>
+        </div>
+      </div>
+    </div>
+    <button (click)="togbtn()" data-toggle="collapse" data-target="#demo" *ngIf="similarItemsJson['getSimilarItemsResponse']['itemRecommendations']['item'].length>5">
+      {{butLabel}}
+    </button>
+
   </div>
+
+  <!--modal goes here -->
+  <div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Product Images</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <a [attr.target]="_blank" a [attr.href]="itemDetailsJson['Item']['PictureURL'][0]"><img class="d-block w-100" [attr.src]="itemDetailsJson['Item']['PictureURL'][0]" alt="First slide"></a>
+              </div>
+              <ng-container *ngFor="let row of itemDetailsJson['Item']['PictureURL'];index as i">
+                <div class="carousel-item" *ngIf="i<itemDetailsJson['Item']['PictureURL'].length-1">
+                  <a [attr.target]="_blank" [attr.href]="itemDetailsJson['Item']['PictureURL'][i+1]"><img class="d-block w-100"  [attr.src]="itemDetailsJson['Item']['PictureURL'][i+1]"></a>
+                </div>
+              </ng-container>
+
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- modal ends -->
 
 </div>
