--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,3 +1,27 @@
-<p *ngIf="showWishList">
-   wishlist works!
-</p>
+<div *ngIf="showWishList">
+<table class="table table-dark table-striped">
+  <tr>
+    <th scope="col">#</th>
+    <th scope="col">Image</th>
+    <th scope="col">Title</th>
+    <th scope="col">Price</th>
+    <th scope="col">Shipping</th>
+    <th scope="col">Seller</th>
+    <th scope="col">Wishlist</th>
+  </tr>
+  <tr *ngFor="let row of ws.getStorage();index as i">
+  <td>{{i+1}}</td>
+    <td *ngIf="row.galleryURL[0]!=undefined"><img src="{{row.galleryURL[0]}}"></td>
+    <td *ngIf="row.galleryURL[0]==undefined">N/A</td>
+    <td>{{row.title}}</td>
+    <td>{{row.sellingStatus[0].currentPrice[0].__value__}}</td>
+    <td>{{row.shippingInfo[0].shippingServiceCost[0].__value__}}</td>
+    <td>{{row.sellerInfo[0].sellerUserName[0]}}</td>
+    <td>
+      <i class="material-icons" (click)="removeFromTable(row)">
+        remove_shopping_cart
+     </i>
+    </td>
+  <tr>
+</table>
+</div>
