--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,3 +11,7 @@
 </app-form-component>
 
 
+//make wishlist child of result
+//add wishlist tag in result html
+//add output emitter in wishlist
+//receive in result html
