back button done,google photos,facebook,progress bar done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,11 @@
 <app-form-component>
   <app-results>
     <app-prod-details></app-prod-details>
+
   </app-results>
-  <app-wishlist></app-wishlist>
+  <app-wishlist>
+    <app-prod-details></app-prod-details>
+  </app-wishlist>
 </app-form-component>
 
 
