--- a/src/app/form-component/form-component.component.css
+++ b/src/app/form-component/form-component.component.css
@@ -1,3 +1,17 @@
 .form-check-input{
   width: unset;
 }
+.reqField::after{
+  content: "*";
+  color:red;
+}
+
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+
+  color: white;
+  background-color: black;
+
+}
+
+
