--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -1,13 +1,28 @@
+<!--<div *ngIf="showpbar&&!(itemDetailsJson&&similarItemsJson&&photosJson)">-->
+<div *ngIf="showpbar">
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+
+</div>
 
 
+<div *ngIf="itemDetailsJson&&similarItemsJson&&photosJson&&showResults" class="container">
 
-<div *ngIf="itemDetailsJson&&similarItemsJson&&showResults">
+
+  <button (click)="emitToParent()">Back</button>
 
 
-  <button (click)="emitToParent()">List</button>
+  <i class="material-icons float-right" *ngIf="!prodSet.has(currentRow.itemId[0])" (click)="callWish()">
+    add_shopping_cart
+  </i>
+  <i class="material-icons float-right" *ngIf="prodSet.has(currentRow.itemId[0])" (click)="removeWish()">
+    remove_shopping_cart
+  </i>
 
+  <a target="_blank" class="float-right" [href]="link"><img src="http://csci571.com/hw/hw8/Images/facebook.png" width="40px" height="40px"></a>
   <div>
-    <ul class="nav nav-pills mb-3 justify-content-center pull-right"  id="pills-tab" role="tablist" >
+    <ul class="nav nav-pills mb-3 justify-content-end"  id="pills-tab" role="tablist" >
       <li class="nav-item">
         <a class="nav-link active" id="pills-prod-tab" data-toggle="pill" href="#prodtab" role="tab" aria-controls="pills-home"
             aria-selected="true" (click)="prod_clicked()">Product</a>
@@ -32,13 +47,8 @@
 
     </ul>
   </div>
-  <i class="material-icons" *ngIf="!prodSet.has(currentRow.itemId[0])" (click)="callWish()">
-    add_shopping_cart
-  </i>
-  <i class="material-icons" *ngIf="prodSet.has(currentRow.itemId[0])" (click)="removeWish()">
-    remove_shopping_cart
-  </i>
 
+  <!--(currentRow.title,itemDetailsJson['Item']['CurrentPrice']['Value'],itemDetailsJson['Item']['ViewItemURLForNaturalSearch']-->
   <div *ngIf="prodclicked" id="prodtab" class="tab-pane fade show active" aria-labelledby="pills-prod-tab">
     <table class="table table-dark table-striped ">
       <tr *ngIf="itemDetailsJson['Item']!=undefined && itemDetailsJson['Item']['PictureURL']!=undefined &&
@@ -100,8 +110,43 @@
   </div>
 
   <div *ngIf="photclicked" id="photostab" class="tab-pane fade show active" aria-labelledby="pills-photos-tab">
-    Inside photos
-  </div>
+
+
+    <div class="container-fluid center">
+
+      <div class="d-flex flex-row flex-wrap justify-content-center">
+
+
+
+
+        <div class="d-flex flex-column">
+          <img class="img1" [src]="photosJson['items'][0]['link']">
+          <img class="img2" [src]="photosJson['items'][3]['link']">
+        </div>
+        <div class="d-flex flex-column">
+          <img class="img3" [src]="photosJson['items'][1]['link']">
+          <img class="img4" [src]="photosJson['items'][4]['link']">
+          <img class="img5" [src]="photosJson['items'][6]['link']">
+        </div>
+        <div class="d-flex flex-column">
+          <img class="img6" [src]="photosJson['items'][2]['link']">
+          <img class="img8" [src]="photosJson['items'][5]['link']">
+          <img class="img9" [src]="photosJson['items'][7]['link']">
+        </div>
+
+      </div>
+
+
+
+      </div>
+
+    </div>
+
+
+
+
+
+
 
   <div *ngIf="shipclicked" id="shippingTab" class="tab-pane fade show active" aria-labelledby="pills-shipping-tab">
     <table class="table table-dark table-striped ">
