keyword validation working

--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -109,6 +109,8 @@
     </table>
   </div>
 
+
+  <div *ngIf="photosJson['items']==undefined">No photos found</div>
   <div *ngIf="photclicked" id="photostab" class="tab-pane fade show active" aria-labelledby="pills-photos-tab">
 
 
