--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showWishList">
+<div *ngIf="showWishList" class="container">
 
   <ng-container *ngIf="ws.getStorage().length==0">
     <div>
