--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -39,7 +39,7 @@
           }}</a></td>
         <td>
           ${{row.sellingStatus[0].currentPrice[0].__value__ == null ? 'N/A' : row.sellingStatus[0].currentPrice[0].__value__}}</td>
-        <td>{{row.shippingInfo[0].shippingServiceCost[0].__value__ == null ? 'N/A' : row.shippingInfo[0].shippingServiceCost[0].__value__}}</td>
+        <td>${{row.shippingInfo[0].shippingServiceCost[0].__value__ == null ? 'N/A' : row.shippingInfo[0].shippingServiceCost[0].__value__}}</td>
         <td>{{row.postalCode == null ? 'N/A' : row.postalCode}}</td>
         <td>{{row.sellerInfo[0].sellerUserName[0] == null ? 'N/A' : row.sellerInfo[0].sellerUserName[0]}}</td>
 
