--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -34,21 +34,55 @@
         <td>{{(page - 1) * 10 + i + 1}}</td>
         <td *ngIf="row.galleryURL[0]!=undefined"><img src="{{row.galleryURL[0]}}"></td>
         <td *ngIf="row.galleryURL[0]==undefined">N/A</td>
-        <td><a data-toggle="tooltip" placement="bottom" ngbTooltip="{{row.title}}"
-               (click)="callChild(row['itemId']['0'],row.title,row,1)">{{  row.title == null ? 'N/A' : (row.title.toString().length > 50 ? (row.title.toString().substring(0, 50).slice(-1) == ' ' ? (row.title.toString().substring(0, 50) + '...') : (row.title.toString().substring(0, (row.title.toString().substring(0, 50).lastIndexOf(' '))) + '...')) : row.title.toString())
-          }}</a></td>
-        <td>
-          ${{row.sellingStatus[0].currentPrice[0].__value__ == null ? 'N/A' : row.sellingStatus[0].currentPrice[0].__value__}}</td>
-        <td>{{row.shippingInfo[0].shippingServiceCost[0].__value__ == null ? 'N/A' : row.shippingInfo[0].shippingServiceCost[0].__value__}}</td>
-        <td>{{row.postalCode == null ? 'N/A' : row.postalCode}}</td>
-        <td>{{row.sellerInfo[0].sellerUserName[0] == null ? 'N/A' : row.sellerInfo[0].sellerUserName[0]}}</td>
+        <td *ngIf="row.title!=undefined">
+          <a data-toggle="tooltip" placement="bottom" ngbTooltip="{{row.title}}"
+               (click)="callChild(row['itemId']['0'],row.title,row,1)">
+            {{  row.title == null ? 'N/A' : (row.title.toString().length > 50 ? (row.title.toString().substring(0, 50).slice(-1) == ' ' ? (row.title.toString().substring(0, 50) + '...') : (row.title.toString().substring(0, (row.title.toString().substring(0, 50).lastIndexOf(' '))) + '...')) : row.title.toString())
+          }}</a>
+        </td>
+        <td *ngIf="row.title==undefined">
+         N/A
+        </td>
 
-        <td *ngIf="!this.itSet.has(row.itemId[0])"> <i class="material-icons" (click)="addToWish(row)">
-          add_shopping_cart
-        </i></td>
-        <td *ngIf="this.itSet.has(row.itemId[0])"><i class="material-icons" (click)="removeFromWish(row)">
-          remove_shopping_cart
-        </i></td>
+        <td *ngIf="row.sellingStatus!=undefined &&row.sellingStatus[0]!=undefined&&row.sellingStatus[0].currentPrice[0]!=undefined&&row.sellingStatus[0].currentPrice[0].__value__!=undefined">
+          ${{row.sellingStatus[0].currentPrice[0].__value__ == null ? 'N/A' : row.sellingStatus[0].currentPrice[0].__value__}}
+        </td>
+        <td *ngIf="row.sellingStatus==undefined||row.sellingStatus[0]==undefined||row.sellingStatus[0].currentPrice[0]==undefined">
+          N/A
+        </td>
+
+
+        <td *ngIf="row.shippingInfo!=undefined&&row.shippingInfo[0]!=undefined&&row.shippingInfo[0].shippingServiceCost!=undefined&&row.shippingInfo[0].shippingServiceCost[0]!=undefined&&row.shippingInfo[0].shippingServiceCost[0].__value__!=undefined">
+          {{row.shippingInfo[0].shippingServiceCost[0].__value__ == null ? 'N/A' : row.shippingInfo[0].shippingServiceCost[0].__value__}}
+        </td>
+        <td *ngIf="row.shippingInfo==undefined||row.shippingInfo[0]==undefined||row.shippingInfo[0].shippingServiceCost==undefined||row.shippingInfo[0].shippingServiceCost[0]==undefined||row.shippingInfo[0].shippingServiceCost[0].__value__==undefined">
+          N/A
+        </td>
+        <td *ngIf="row.postalCode!=undefined">
+        {{row.postalCode == null ? 'N/A' : row.postalCode}}
+      </td>
+        <td *ngIf="row.postalCode==undefined">
+          {{row.postalCode == null ? 'N/A' : row.postalCode}}
+        </td>
+        <td *ngIf="row.sellerInfo!=undefined&&row.sellerInfo[0]!=undefined&&row.sellerInfo[0].sellerUserName!=undefined&&row.sellerInfo[0].sellerUserName[0]!=undefined">
+          {{row.sellerInfo[0].sellerUserName[0] == null ? 'N/A' : row.sellerInfo[0].sellerUserName[0]}}
+        </td>
+        <td *ngIf="row.sellerInfo==undefined||row.sellerInfo[0]==undefined||row.sellerInfo[0].sellerUserName==undefined||row.sellerInfo[0].sellerUserName[0]==undefined">
+          N/A
+        </td>
+
+
+
+        <td *ngIf="!this.itSet.has(row.itemId[0])">
+          <i class="material-icons" (click)="addToWish(row)">
+            add_shopping_cart
+          </i>
+        </td>
+        <td *ngIf="this.itSet.has(row.itemId[0])">
+          <i class="material-icons" (click)="removeFromWish(row)">
+            remove_shopping_cart
+          </i>
+        </td>
 
 
       </tr>
