--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -172,22 +172,24 @@
 <div>
   <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist" >
     <li class="nav-item">
-      <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#results" role="tab" aria-controls="pills-home"
+      <a class="nav-link active" id="resultTab" data-toggle="pill" href="#results" role="tab" aria-controls="results"
          (click)="showChildResult()" aria-selected="true" >Results</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#wishlist" role="tab"
-         (click)="showChildWishList()" aria-controls="pills-profile" aria-selected="false">Wishlist</a>
+      <a class="nav-link" id="wishTab" data-toggle="pill" href="#wishlist" role="tab"
+         (click)="showChildWishList()" aria-controls="wishlist" aria-selected="false">Wishlist</a>
     </li>
 
   </ul>
 </div>
-<div class="tab-pane fade show active" id="results" role="tabpanel" aria-labelledby="pills-home-tab">
+<div class="tab-pane fade show active" id="results" role="tabpanel" aria-labelledby="resultTab">
   <app-results></app-results>
 </div>
 
-<div class="tab-pane fade show active" id="wishlist" role="tabpanel" aria-labelledby="pills-home-tab">
+<div class="tab-pane fade show active"  id="wishlist"  role="tabpanel"  aria-labelledby="wishTab">
+
   <app-wishlist></app-wishlist>
+
 </div>
 
 
