clear except form wishlist working and row highlighting and detail button from wishlist and result added.

--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -18,7 +18,7 @@
   <i class="material-icons float-right" *ngIf="!prodSet.has(currentRow.itemId[0])" (click)="callWish()">
     add_shopping_cart
   </i>
-  <i class="material-icons float-right" *ngIf="prodSet.has(currentRow.itemId[0])" (click)="removeWish()">
+  <i class="material-icons float-right" style="color: gold" *ngIf="prodSet.has(currentRow.itemId[0])" (click)="removeWish()">
     remove_shopping_cart
   </i>
 
